deployment-config/kubernetes-manifest-prod.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: $APP_NAME
  name: $APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  strategy: {}
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      nodeSelector:
        node-worker: enabled
      containers:
        - image: $APP_ECR_IMAGE_URI
          name: $APP_NAME-container
          imagePullPolicy: Always
          resources:
            limits:
              cpu: $CPU_LIMIT
              memory: $MEMORY_LIMIT
          ports:
            - containerPort: 80
      dnsPolicy: 'None'
      dnsConfig:
        nameservers:
          - $NAME_SERVER_IP_CLUSTER
        searches:
          - $EKS_NAME_SPACE.svc.cluster.local
          - svc.cluster.local
          - cluster.local
          - $AWS_REGION.compute.internal
        options:
          - name: ndots
            value: '5'

status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: $APP_NAME

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: $PRIVATE_SUBNETS
    alb.ingress.kubernetes.io/group.name: $ALB_GROUP_NAME
    alb.ingress.kubernetes.io/load-balancer-name: $ALB_NAME
    alb.ingress.kubernetes.io/security-groups: $ALB_SECURITY_GROUP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-port: 'traffic-port'
    alb.ingress.kubernetes.io/healthcheck-protocol: 'HTTP'
    alb.ingress.kubernetes.io/healthcheck-path: $API_PREFIX/healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '10'
    alb.ingress.kubernetes.io/success-codes: '200-299'
    alb.ingress.kubernetes.io/certificate-arn: $ACM_ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
          - path: $API_PREFIX
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: $API_PREFIX
            pathType: Prefix
            backend:
              service:
                name: $APP_NAME
                port:
                  number: 80
